ingress/delivery.yml
apiVersion: v1
kind: Service
metadata:
  name: delivery
  namespace: snackbar
  labels:
    service: delivery
    project: snackbar
spec:
  type: NodePort
  selector:
    service: delivery
    project: snackbar
  ports:
    - port: 80
      targetPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery
  namespace: snackbar
  labels:
    service: delivery
    project: snackbar
spec:
  replicas: 2
  selector:
    matchLabels:
      service: delivery
      project: snackbar
  template:
    metadata:
      labels:
        service: delivery
        project: snackbar
    spec:
      containers:
        - name: delivery
          image: yoonjeong/my-app:2.0
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "64Mi"
              cpu: "50m"
