ingress/order.yml
apiVersion: v1
kind: Service
metadata:
  name: order
  namespace: snackbar
  labels:
    project: snackbar
    service: order

spec:
  type: NodePort
  selector:
    project: snackbar
    service: order
  ports:
  - port: 80
    targetPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
  namespace: snackbar
  labels:
    service: order
    project: snackbar
spec:
  replicas: 2
  selector:
    matchLabels:
      service: order
      project: snackbar
  template:
    metadata:
      labels:
        service: order
        project: snackbar
    spec:
      containers:
        - name: order
          image: yoonjeong/order:1.0
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "64Mi"
              cpu: "50m"
