ingress/payment.yml
apiVersion: v1
kind: Service
metadata:
  name: payment
  namespace: snackbar
  labels:
    project: snackbar
    service: payment

spec:
  type: NodePort
  selector:
    project: snackbar
    service: payment
  ports:
  - port: 80
    targetPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
  namespace: snackbar
  labels:
    service: payment
    project: snackbar
spec:
  replicas: 2
  selector:
    matchLabels:
      service: payment
      project: snackbar
  template:
    metadata:
      labels:
        service: payment
        project: snackbar
    spec:
      containers:
        - name: payment
          image: yoonjeong/payment:1.0
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "64Mi"
              cpu: "50m"
