ingress/ingress-multiple-hosts.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snackbar
  namespace: snackbar
  labels:
    project: snackbar

spec:
  defaultBackend:
    service:
      name: home
      port:
        number: 80

  rules:
  - host: order.snackbar.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: order
            port:
              number: 80

  - host: payment.snackbar.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: payment
            port:
              number: 80

  - host: delivery.snackbar.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: delivery
            port:
              number: 80
