ingress/ingress-single-hosts.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snackbar-s
  namespace: snackbar
  labels:
    project: snackbar

spec:
  defaultBackend:
    service:
      name: home
      port:
        number: 80
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /order
            backend:
              service:
                name: order
                port:
                  number: 80

          - pathType: Prefix
            path: /payment
            backend:
              service:
                name: payment
                port:
                  number: 80

          - pathType: Prefix
            path: /delivery
            backend:
              service:
                name: delivery
                port:
                  number: 80
